Changes commited after trip to cameroun.

--- a/totalhr.Resources/Resources/Account.fr-FR.resx
+++ b/totalhr.Resources/Resources/Account.fr-FR.resx
@@ -319,7 +319,7 @@
     <value>Mes taches</value>
   </data>
   <data name="V_Time_Recording" xml:space="preserve">
-    <value>Enregistrement de durée</value>
+    <value>Horaires</value>
   </data>
   <data name="V_Title" xml:space="preserve">
     <value>Civilité</value>
